# LocalSingleCell

./: .dockerignore  .gitignore  ARCHITECTURE_PLAN.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  app.py  app_backup.py  app_simple.py  config.yaml  debug_report.md  docker-compose.yml  fix_report.md  optimization_report.md  optimization_summary.md  phase2_completion_report.md  phase3_completion_report.md  phase3_home_page_card_completion.md  pyproject.toml  requirements.txt  start.bat  start.sh  test_imports.py  test_minimal.py  test_quick.py  test_simple.py  test_simple_final.py
.github/workflows/: docker.yml  lint.yml  test.yml
.streamlit/: config.toml  custom.css
core/: __init__.py  ai_parser.py  analysis_pipeline.py  data_loader.py  downsampling.py  enrichment.py  qc_filter.py  spatial_loader.py  spatial_pipeline.py  spatial_visualization.py  sra_processor.py  visualization.py
core/config/: param_manager.py  parameter_schema.py
data/: pbmc3k_processed.h5ad
docs/: API_REFERENCE.md  FAQ.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_REQUIREMENTS.md  USER_GUIDE.md
docs/team/: README.md  acceptance_criteria.md  code_implementation.md  product_design.md  ui_design.md
scripts/: generate_sample_data.py
tests/: __init__.py  conftest.py
tests/test_core/: test_ai_parser.py  test_data_loader.py  test_qc_filter.py
tests/test_utils/: __init__.py  test_config_utils.py  test_exception_utils.py  test_validator_utils.py
ui/: __init__.py  ai_analysis_page.py  data_import_page.py  enrichment_page.py  help_page.py  home_page.py  pipeline_config_page.py  result_export_page.py  sidebar.py  spatial_pipeline_config_page.py  spatial_visualization_page.py  visualization_page.py
ui/components/: __init__.py  navbar.py  param_editor.py
ui/pages/analysis/: __init__.py  analysis_tools.py
ui/pages/data/: __init__.py  data_center.py
ui/pages/help/: __init__.py  help_page.py
ui/pages/home/: __init__.py
utils/: config_utils.py  exception_utils.py  exceptions.py  logger_utils.py  performance_utils.py  security_utils.py  validator_utils.py  visual_utils.py
